Complete css exercise. Add and modify selectors

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,23 +1,19 @@
-body {
+* {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.para,
-.small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
+  color: black;
 }
 
 .para {
-  font-size: 22px;
+  font-size: 20px;
+  font-weight: 1000;
 }
 
-.confirm {
+.para.small-para {
+  font-size: 12px;
+  font-weight: 1000;
+}
+
+.button.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -25,18 +21,15 @@ body {
 
 .button {
   background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
 .child {
-  color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
 
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
+.text .child {
+  font-size: 12px;
+  font-weight: 950;
 }
